# uxrp

./: Cargo.toml  Cross.toml  bootstrap  docker-compose.yml  settings.toml  test
.github/workflows/: commit.yml
rust_server/: Cargo.toml
rust_server/src/: lib.rs
spec/: config.yml
spec/services/: auth.yml
uxrp/: Cargo.toml  settings.toml
uxrp/src/: lib.rs  server.rs  session.rs  user.rs
uxrp/tests/: auth_test.rs
