[package]
name = "uxrp"
version = "0.1.0"
edition = "2021"

[dependencies]
uxrp-protocol = { path = "../rust_server" }
uuid = { version = "0.8", features = [ "v4" ] }
redis = { version = "0.21", features = [ "tokio-comp", "connection-manager" ] }
thiserror = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
aws-config = "0.3"
aws-sdk-dynamodb = "0.3"
config = "0.11"
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
rust-argon2 = "1"
rand = "0.8"
